rhel images info for baremetal
Change-Id: I526929c7721e3068ca38b1f15166bd8653f055d0

--- a/settings/provisioner/common-bm.yml
+++ b/settings/provisioner/common-bm.yml
@@ -15,5 +15,9 @@ provisioner:
       '22':
         id: 'not-used-for-baremetal'
         remote_user: 'not-used-for-baremetal'
+    rhel:
+      '7.1':
+        id: 'not-used-for-baremetal'
+        remote_user: 'not-used-for-baremetal'
 
 base_dir: !env WORKSPACE
