some additional settings from master
Change-Id: I75f358aad8e9b028c5ca8ea05351b9c9dec0058e

--- a/settings/installer/packstack/topology/all-in-one-cicentos.yml
+++ b/settings/installer/packstack/topology/all-in-one-cicentos.yml
@@ -36,3 +36,12 @@ provisioner:
                 - network
                 - compute
                 - openstack_nodes
+
+
+product:
+    full_version: kilo
+    version:
+        major: 7
+        minor: 0
+        code_name: kilo
+
