use just controller for node name
Change-Id: I88bfc8c92f4c748c29f27fe26e7af2e6aeac8ee5

--- a/settings/installer/packstack/topology/all-in-one-cicentos.yml
+++ b/settings/installer/packstack/topology/all-in-one-cicentos.yml
@@ -16,7 +16,7 @@ provisioner:
                     end: 340
     nodes:
         controller: &controller
-            name: '{{ tmp.node_prefix }}controller'
+            name: 'controller'
             hostname:
             rebuild: no
             network: &network_params
