WIP: validate packstack, do not merge
Change-Id: Ia28a772d472fd62ed11820cc498f42938f2db4f3

--- a/settings/installer/packstack.yml
+++ b/settings/installer/packstack.yml
@@ -1,6 +1,18 @@
 installer:
     type: packstack
-
+    short_type: pksk
+    validate:
+        tenant_network_name: private
+        router_name: ext-to-int
+        admin_username: admin
+        admin_tenant_name: admin
+        admin_password: redhat
+        keystone_endpoint: http://127.0.0.1:5000/v2.0/
+        instance_name: khaleesi
+        image:
+            user: cirros
+            url: http://download.cirros-cloud.net/0.3.4/
+            id: cirros-0.3.4-x86_64-disk.img
     packstack:
         answer_file: packstack_config.txt
         config:
